Verif/Test/Invalide/test_erreur_3.70-22.deca
// Description:
//    Programme soulevant l'erreur (3.70)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'int' et 'boolean' sont incompatibles avec l'opérateur binaire '+' (règle 3.70)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

float var;
{
   var = 1 + true;
}